--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       --panel:#141519;
       --muted:#c9d0db;
       --y:#ffd000;--r:#d62828;--ink:#f3f5f8;--max:1100px
+      form[hidden] { display:none !important; visibility:hidden !important; }
+
     }
     *{box-sizing:border-box}
     html,body{margin:0;font-family:Poppins,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:linear-gradient(to bottom,var(--bg1),var(--bg2),var(--bg3));color:var(--ink)}
@@ -214,9 +216,11 @@
   <div class="container">
     <h3 class="section-title">Request a Call Back</h3>
 
-    <!-- Hidden stub ensures Netlify "sees" the form at build -->
-      <input type="text" name="Name">
-    </form>
+    <!-- Hidden stub so Netlify detects the form at build -->
+<form name="request" data-netlify="true" netlify-honeypot="bot-field" hidden aria-hidden="true">
+  <input type="text" name="Name" tabindex="-1" autocomplete="off">
+  <input type="text" name="bot-field" tabindex="-1" autocomplete="off">
+</form>
 
     <form name="request" method="POST" action="/thanks.html" data-netlify="true" netlify-honeypot="bot-field">
       <input type="hidden" name="form-name" value="request">
